Dynamic API Add
